fixes reposts overflowing

--- a/components/Mentions/Reposts.css
+++ b/components/Mentions/Reposts.css
@@ -1,7 +1,7 @@
 .Reposts {
   display: flex;
   list-style-type: none;
-  padding-inline-start: 0;
+  padding-inline: 0 24px;
 
   & > li {
     padding: 0;
